<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/protocol"/>

  <RadioGroup
      android:id="@+id/appwidget_protocol"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" >
      <RadioButton
          android:id="@+id/HTTP"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/protocol_shttp"/>

      <RadioButton
          android:id="@+id/SFTP"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/protocol_sftp"/>
  </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/appwidget_host"
        android:text="@string/host"/>

    <EditText
        android:id="@+id/appwidget_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/appwidget_username"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/appwidget_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:labelFor="@+id/appwidget_password"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/appwidget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:labelFor="@+id/appwidget_remoteDirectory"
      android:text="@string/remoteDirectory"/>

  <EditText
      android:id="@+id/appwidget_remoteDirectory"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:labelFor="@+id/appwidget_googleMapsApiKey"
      android:text="@string/googleMaps"/>

  <EditText
      android:id="@+id/appwidget_googleMapsApiKey"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/googleMapsApiKey"
      android:inputType="text"/>



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

    <Button style="?android:buttonBarButtonStyle"
        android:id="@+id/connectionTest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_connection"/>

    <Button  style="?android:buttonBarButtonStyle"
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_widget"/>
  </LinearLayout>



</LinearLayout>
</ScrollView>
