<resources>
    <string name="app_name">GPS2FTP</string>
    <string name="action_settings">Settings
    </string>
    <string name="appwidget_text">no address available</string>
    <string name="protocol">Protocol</string>
    <string name="host">Host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remoteDirectory">URL or Directory</string>
    <string name="googleMaps">Google Maps Api Key</string>

    <string name="save_widget">Save</string>
    <string name="test_connection">Test Connection</string>
    <string name="protocol_sftp">SFTP</string>
    <string name="protocol_shttp">HTTP(S)</string>
</resources>
